# ccminer-arm32

./: CMakeLists.txt  Makefile.am  Makefile.arm  README.md  build-arm.sh  build.sh  ccminer.conf  ccminer.cpp  configure.ac  miner.h  serialize.hpp  test-arm.sh  toolchain-armv7l.cmake  toolchain-armv9.cmake  util.cpp
.github/workflows/: build.yml
compat/: gettimeofday.c
equi/: equi-stratum.cpp
verus/: haraka.h  haraka_neon.c  haraka_neon.h  haraka_portable.h  verus_clhash.h  verus_clhash_neon.cpp  verus_clhash_neon.h  verus_clhash_portable.cpp  verus_hash.cpp  verus_hash.h  verusscan.cpp
